scilab/modules/parse/src/bison/parsescilab.output
Terminals which are not used

   "line break"
   "spaces"
   "block comment"


Grammar

    0 $accept: program "end of file"

    1 program: expressions
    2        | "end of line" expressions

    3 expressions: recursiveExpression
    4            | recursiveExpression expression
    5            | recursiveExpression expression "line comment"
    6            | expression
    7            | expression "line comment"

    8 recursiveExpression: recursiveExpression expression expressionLineBreak
    9                    | recursiveExpression expression "line comment" expressionLineBreak
   10                    | expression "line comment" expressionLineBreak
   11                    | expression expressionLineBreak

   12 expressionLineBreak: ";"
   13                    | ","
   14                    | "end of line"
   15                    | expressionLineBreak ";"
   16                    | expressionLineBreak ","
   17                    | expressionLineBreak "end of line"

   18 expression: functionDeclaration
   19           | functionCall
   20           | variableDeclaration
   21           | ifControl
   22           | selectControl
   23           | forControl
   24           | whileControl
   25           | tryControl
   26           | variable
   27           | implicitFunctionCall
   28           | "break"
   29           | returnControl
   30           | "line comment"

   31 implicitFunctionCall: implicitFunctionCall implicitCallable
   32                     | "identifier" implicitCallable

   33 implicitCallable: "identifier"
   34                 | "integer"
   35                 | "number"
   36                 | "float"
   37                 | "string"
   38                 | "$"
   39                 | "%t or %T"
   40                 | "%f or %F"
   41                 | implicitCallable "." "identifier"
   42                 | implicitCallable "." functionCall
   43                 | simpleFunctionCall
   44                 | implicitCallable rightOperand
   45                 | "path"

   46 functionCall: simpleFunctionCall
   47             | specificFunctionCall
   48             | recursiveFunctionCall
   49             | "(" functionCall ")"
   50             | "~ or @" functionCall

   51 specificFunctionCall: "%t or %T" "(" functionArgs ")"
   52                     | "%f or %F" "(" functionArgs ")"

   53 simpleFunctionCall: "identifier" "(" functionArgs ")"

   54 recursiveFunctionCall: simpleFunctionCall "(" functionArgs ")"
   55                      | recursiveFunctionCall "(" functionArgs ")"

   56 functionArgs: variable
   57             | functionCall
   58             | ":"
   59             | variableDeclaration
   60             | /* empty */
   61             | functionArgs "," variable
   62             | functionArgs "," functionCall
   63             | functionArgs "," ":"
   64             | functionArgs "," variableDeclaration
   65             | functionArgs ","

   66 functionDeclaration: "function" "identifier" "=" "identifier" functionDeclarationArguments functionDeclarationBreak functionBody "endfunction"
   67                    | "function" "[" functionDeclarationReturns "]" "=" "identifier" functionDeclarationArguments functionDeclarationBreak functionBody "endfunction"
   68                    | "function" "[" "]" "=" "identifier" functionDeclarationArguments functionDeclarationBreak functionBody "endfunction"
   69                    | "function" "identifier" functionDeclarationArguments functionDeclarationBreak functionBody "endfunction"

   70 functionDeclarationReturns: idList

   71 functionDeclarationArguments: "(" idList ")"
   72                             | "(" ")"
   73                             | /* empty */

   74 idList: idList "," "identifier"
   75       | "identifier"

   76 functionDeclarationBreak: lineEnd
   77                         | ";"
   78                         | ";" "end of line"
   79                         | ","
   80                         | "," "end of line"

   81 functionBody: expressions
   82             | /* empty */

   83 condition: functionCall
   84          | variable

   85 comparison: variable comparators comparable
   86           | functionCall comparators comparable

   87 comparable: variable
   88           | functionCall
   89           | ":"

   90 operation: variable rightOperand
   91          | functionCall rightOperand
   92          | "-" variable
   93          | "-" functionCall
   94          | "+" variable
   95          | "+" functionCall
   96          | variable "** or ^" variable
   97          | variable "** or ^" functionCall
   98          | functionCall "** or ^" variable
   99          | functionCall "** or ^" functionCall
  100          | variable ".^" variable
  101          | variable ".^" functionCall
  102          | functionCall ".^" variable
  103          | functionCall ".^" functionCall
  104          | variable "'"
  105          | variable ".'"
  106          | functionCall "'"
  107          | functionCall ".'"

  108 rightOperand: "+" variable
  109             | "+" functionCall
  110             | "-" variable
  111             | "-" functionCall
  112             | "*" variable
  113             | "*" functionCall
  114             | ".*" variable
  115             | ".*" functionCall
  116             | ".*." variable
  117             | ".*." functionCall
  118             | "/" variable
  119             | "/" functionCall
  120             | "./" variable
  121             | "./" functionCall
  122             | "./." variable
  123             | "./." functionCall
  124             | "/." variable
  125             | "/." functionCall
  126             | "\\" variable
  127             | "\\" functionCall
  128             | ".\\" variable
  129             | ".\\" functionCall
  130             | ".\\." variable
  131             | ".\\." functionCall

  132 listableBegin: ":" variable
  133              | ":" functionCall

  134 listableEnd: listableBegin ":" variable
  135            | listableBegin ":" functionCall
  136            | listableBegin

  137 variable: "~ or @" variable
  138         | variable "." "identifier"
  139         | variable "." functionCall
  140         | functionCall "." variable
  141         | functionCall "." functionCall
  142         | variable listableEnd
  143         | functionCall listableEnd
  144         | matrix
  145         | cell
  146         | operation
  147         | "identifier"
  148         | "integer"
  149         | "number"
  150         | "float"
  151         | "string"
  152         | "$"
  153         | "%t or %T"
  154         | "%f or %F"
  155         | "(" variable ")"
  156         | "(" variableFields ")"
  157         | comparison

  158 variableFields: variableFields "," variable
  159               | variableFields "," functionCall
  160               | variable "," variable
  161               | functionCall "," functionCall
  162               | functionCall "," variable
  163               | variable "," functionCall

  164 cell: "{" matrixOrCellLines "}"
  165     | "{" lineEnd matrixOrCellLines "}"
  166     | "{" matrixOrCellLines matrixOrCellColumns "}"
  167     | "{" lineEnd matrixOrCellLines matrixOrCellColumns "}"
  168     | "{" matrixOrCellColumns "}"
  169     | "{" lineEnd matrixOrCellColumns "}"
  170     | "{" "}"

  171 matrix: "[" matrixOrCellLines "]"
  172       | "[" lineEnd matrixOrCellLines "]"
  173       | "[" matrixOrCellLines matrixOrCellColumns "]"
  174       | "[" lineEnd matrixOrCellLines matrixOrCellColumns "]"
  175       | "[" matrixOrCellColumns "]"
  176       | "[" lineEnd matrixOrCellColumns "]"
  177       | "[" "]"

  178 matrixOrCellLines: matrixOrCellLines matrixOrCellLine
  179                  | matrixOrCellLine

  180 matrixOrCellLineBreak: ";"
  181                      | "end of line"
  182                      | ";" "end of line"

  183 matrixOrCellLine: matrixOrCellColumns matrixOrCellLineBreak
  184                 | matrixOrCellColumns "line comment" "end of line"
  185                 | matrixOrCellColumns ";" "line comment" "end of line"

  186 matrixOrCellColumns: matrixOrCellColumns matrixOrCellColumnsBreak variable
  187                    | matrixOrCellColumns matrixOrCellColumnsBreak functionCall
  188                    | matrixOrCellColumns variable
  189                    | matrixOrCellColumns functionCall
  190                    | variable
  191                    | functionCall

  192 matrixOrCellColumnsBreak: matrixOrCellColumnsBreak ","
  193                         | ","

  194 variableDeclaration: assignable "=" variable
  195                    | assignable "=" functionCall
  196                    | functionCall "=" variable
  197                    | functionCall "=" functionCall
  198                    | assignable "=" ":"
  199                    | functionCall "=" ":"
  200                    | assignable "=" returnControl
  201                    | functionCall "=" returnControl

  202 assignable: variable "." "identifier"
  203           | variable "." functionCall
  204           | functionCall "." variable
  205           | functionCall "." functionCall
  206           | "identifier"
  207           | multipleResults

  208 multipleResults: "[" matrixOrCellColumns "]"

  209 ifControl: "if" condition then thenBody "end"
  210          | "if" condition then thenBody else elseBody "end"
  211          | "if" condition then thenBody elseIfControl "end"

  212 thenBody: expressions
  213         | /* empty */

  214 elseBody: expressions
  215         | /* empty */

  216 ifConditionBreak: ";"
  217                 | ";" "end of line"
  218                 | ","
  219                 | "," "end of line"
  220                 | "end of line"

  221 then: "then"
  222     | ifConditionBreak "then"
  223     | ifConditionBreak "then" "end of line"
  224     | "then" ifConditionBreak
  225     | ifConditionBreak
  226     | /* empty */

  227 else: "else"
  228     | "else" ","
  229     | "else" ";"
  230     | "else" "end of line"
  231     | "else" "," "end of line"
  232     | "else" ";" "end of line"

  233 elseIfControl: "elseif" condition then thenBody
  234              | "elseif" condition then thenBody else elseBody
  235              | "elseif" condition then thenBody elseIfControl

  236 selectControl: "select" selectable selectConditionBreak casesControl "end"
  237              | "select" selectable selectConditionBreak casesControl else elseBody "end"
  238              | "select" selectable "line comment" selectConditionBreak casesControl "end"
  239              | "select" selectable "line comment" selectConditionBreak casesControl else elseBody "end"

  240 selectable: variable
  241           | functionCall

  242 selectConditionBreak: "end of line"
  243                     | "," "end of line"
  244                     | ";" "end of line"

  245 casesControl: "case" variable caseControlBreak caseBody
  246             | comments "case" variable caseControlBreak caseBody
  247             | "case" variable "line comment" "end of line" caseBody
  248             | comments "case" variable "line comment" "end of line" caseBody
  249             | casesControl "case" variable caseControlBreak caseBody
  250             | casesControl "case" variable "line comment" "end of line" caseBody

  251 caseBody: expressions
  252         | /* empty */

  253 caseControlBreak: "then"
  254                 | ","
  255                 | ";"
  256                 | "end of line"
  257                 | "then" "end of line"
  258                 | "," "end of line"
  259                 | ";" "end of line"
  260                 | "then" ","
  261                 | "then" "," "end of line"

  262 forControl: "for" "identifier" "=" forIterator forConditionBreak forBody "end"
  263           | "for" "(" "identifier" "=" forIterator ")" forConditionBreak forBody "end"

  264 forIterator: functionCall
  265            | variable

  266 forConditionBreak: "end of line"
  267                  | ";"
  268                  | ";" "end of line"
  269                  | ","
  270                  | "," "end of line"
  271                  | "do"
  272                  | "do" "end of line"
  273                  | /* empty */

  274 forBody: expressions
  275        | /* empty */

  276 whileControl: "while" condition whileConditionBreak whileBody "end"

  277 whileBody: expressions
  278          | /* empty */

  279 whileConditionBreak: ","
  280                    | ";"
  281                    | "do"
  282                    | "do" ","
  283                    | "do" ";"
  284                    | "then"
  285                    | "then" ","
  286                    | "then" ";"
  287                    | lineEnd
  288                    | "," "end of line"
  289                    | ";" "end of line"
  290                    | "do" "end of line"
  291                    | "do" "," "end of line"
  292                    | "do" ";" "end of line"
  293                    | "then" "end of line"
  294                    | "then" "," "end of line"
  295                    | "then" ";" "end of line"

  296 tryControl: "try" "end of line" expressions "catch" "end of line" expressions "end"
  297           | "try" "line comment" "end of line" expressions "catch" "end of line" expressions "end"
  298           | "try" "end of line" expressions "catch" "line comment" "end of line" expressions "end"
  299           | "try" "line comment" "end of line" expressions "catch" "line comment" "end of line" expressions "end"

  300 returnControl: "return"
  301              | "return" variable

  302 comparators: "=="
  303            | "<> or ~="
  304            | "<"
  305            | "<="
  306            | ">"
  307            | ">="
  308            | "&"
  309            | "|"

  310 comments: "line comment" "end of line"
  311         | comments "line comment" "end of line"

  312 lineEnd: "end of line"
  313        | "line comment" "end of line"


Terminals, with rules where they appear

"end of file" (0) 0
error (256)
"line break" (258)
"end of line" (259) 2 14 17 78 80 181 182 184 185 217 219 220 223 230
    231 232 242 243 244 247 248 250 256 257 258 259 261 266 268 270
    272 288 289 290 291 292 293 294 295 296 297 298 299 310 311 312
    313
"spaces" (260)
"%t or %T" (261) 39 51 153
"%f or %F" (262) 40 52 154
"'" (263) 104 106
"~ or @" (264) 50 137
"$" (265) 38 152
"," (266) 13 16 61 62 63 64 65 74 79 80 158 159 160 161 162 163 192
    193 218 219 228 231 243 254 258 260 261 269 270 279 282 285 288
    291 294
":" (267) 58 63 89 132 133 134 135 198 199
";" (268) 12 15 77 78 180 182 185 216 217 229 232 244 255 259 267 268
    280 283 286 289 292 295
"(" (269) 49 51 52 53 54 55 71 72 155 156 263
")" (270) 49 51 52 53 54 55 71 72 155 156 263
"[" (271) 67 68 171 172 173 174 175 176 177 208
"]" (272) 67 68 171 172 173 174 175 176 177 208
"{" (273) 164 165 166 167 168 169 170
"}" (274) 164 165 166 167 168 169 170
"." (275) 41 42 138 139 140 141 202 203 204 205
".'" (276) 105 107
"+" (277) 94 95 108 109
"-" (278) 92 93 110 111
"*" (279) 112 113
".*" (280) 114 115
".*." (281) 116 117
"/" (282) 118 119
"./" (283) 120 121
"/." (284) 124 125
"./." (285) 122 123
"\\" (286) 126 127
".\\" (287) 128 129
".\\." (288) 130 131
"** or ^" (289) 96 97 98 99
".^" (290) 100 101 102 103
"==" (291) 302
"<> or ~=" (292) 303
"<" (293) 304
"<=" (294) 305
">" (295) 306
">=" (296) 307
"&" (297) 308
"|" (298) 309
"=" (299) 66 67 68 194 195 196 197 198 199 200 201 262 263
"if" (300) 209 210 211
"then" (301) 221 222 223 224 253 257 260 261 284 285 286 293 294 295
"else" (302) 227 228 229 230 231 232
"elseif" (303) 233 234 235
"end" (304) 209 210 211 236 237 238 239 262 263 276 296 297 298 299
"select" (305) 236 237 238 239
"case" (306) 245 246 247 248 249 250
"function" (307) 66 67 68 69
"endfunction" (308) 66 67 68 69
"for" (309) 262 263
"while" (310) 276
"do" (311) 271 272 281 282 283 290 291 292
"break" (312) 28
"try" (313) 296 297 298 299
"catch" (314) 296 297 298 299
"return" (315) 300 301
"string" (316) 37 151
"identifier" (317) 32 33 41 53 66 67 68 69 74 75 138 147 202 206 262
    263
"integer" (318) 34 148
"float" (319) 36 150
"number" (320) 35 149
"path" (321) 45
"line comment" (322) 5 7 9 10 30 184 185 238 239 247 248 250 297 298
    299 310 311 313
"block comment" (323)
TOPLEVEL (324)
HIGHLEVEL (325)
UPLEVEL (326)
LISTABLE (327)
FUNCTIONCALL (328)


Nonterminals, with rules where they appear

$accept (74)
    on left: 0
program (75)
    on left: 1 2, on right: 0
expressions (76)
    on left: 3 4 5 6 7, on right: 1 2 81 212 214 251 274 277 296 297
    298 299
recursiveExpression (77)
    on left: 8 9 10 11, on right: 3 4 5 8 9
expressionLineBreak (78)
    on left: 12 13 14 15 16 17, on right: 8 9 10 11 15 16 17
expression (79)
    on left: 18 19 20 21 22 23 24 25 26 27 28 29 30,
    on right: 4 5 6 7 8 9 10 11
implicitFunctionCall (80)
    on left: 31 32, on right: 27 31
implicitCallable (81)
    on left: 33 34 35 36 37 38 39 40 41 42 43 44 45,
    on right: 31 32 41 42 44
functionCall (82)
    on left: 46 47 48 49 50, on right: 19 42 49 50 57 62 83 86 88 91
    93 95 97 98 99 101 102 103 106 107 109 111 113 115 117 119 121
    123 125 127 129 131 133 135 139 140 141 143 159 161 162 163 187
    189 191 195 196 197 199 201 203 204 205 241 264
specificFunctionCall (83)
    on left: 51 52, on right: 47
simpleFunctionCall (84)
    on left: 53, on right: 43 46 54
recursiveFunctionCall (85)
    on left: 54 55, on right: 48 55
functionArgs (86)
    on left: 56 57 58 59 60 61 62 63 64 65, on right: 51 52 53 54 55
    61 62 63 64 65
functionDeclaration (87)
    on left: 66 67 68 69, on right: 18
functionDeclarationReturns (88)
    on left: 70, on right: 67
functionDeclarationArguments (89)
    on left: 71 72 73, on right: 66 67 68 69
idList (90)
    on left: 74 75, on right: 70 71 74
functionDeclarationBreak (91)
    on left: 76 77 78 79 80, on right: 66 67 68 69
functionBody (92)
    on left: 81 82, on right: 66 67 68 69
condition (93)
    on left: 83 84, on right: 209 210 211 233 234 235 276
comparison (94)
    on left: 85 86, on right: 157
comparable (95)
    on left: 87 88 89, on right: 85 86
operation (96)
    on left: 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105
    106 107, on right: 146
rightOperand (97)
    on left: 108 109 110 111 112 113 114 115 116 117 118 119 120 121
    122 123 124 125 126 127 128 129 130 131, on right: 44 90 91
listableBegin (98)
    on left: 132 133, on right: 134 135 136
listableEnd (99)
    on left: 134 135 136, on right: 142 143
variable (100)
    on left: 137 138 139 140 141 142 143 144 145 146 147 148 149 150
    151 152 153 154 155 156 157, on right: 26 56 61 84 85 87 90 92
    94 96 97 98 100 101 102 104 105 108 110 112 114 116 118 120 122
    124 126 128 130 132 134 137 138 139 140 142 155 158 160 162 163
    186 188 190 194 196 202 203 204 240 245 246 247 248 249 250 265
    301
variableFields (101)
    on left: 158 159 160 161 162 163, on right: 156 158 159
cell (102)
    on left: 164 165 166 167 168 169 170, on right: 145
matrix (103)
    on left: 171 172 173 174 175 176 177, on right: 144
matrixOrCellLines (104)
    on left: 178 179, on right: 164 165 166 167 171 172 173 174 178
matrixOrCellLineBreak (105)
    on left: 180 181 182, on right: 183
matrixOrCellLine (106)
    on left: 183 184 185, on right: 178 179
matrixOrCellColumns (107)
    on left: 186 187 188 189 190 191, on right: 166 167 168 169 173
    174 175 176 183 184 185 186 187 188 189 208
matrixOrCellColumnsBreak (108)
    on left: 192 193, on right: 186 187 192
variableDeclaration (109)
    on left: 194 195 196 197 198 199 200 201, on right: 20 59 64
assignable (110)
    on left: 202 203 204 205 206 207, on right: 194 195 198 200
multipleResults (111)
    on left: 208, on right: 207
ifControl (112)
    on left: 209 210 211, on right: 21
thenBody (113)
    on left: 212 213, on right: 209 210 211 233 234 235
elseBody (114)
    on left: 214 215, on right: 210 234 237 239
ifConditionBreak (115)
    on left: 216 217 218 219 220, on right: 222 223 224 225
then (116)
    on left: 221 222 223 224 225 226, on right: 209 210 211 233 234
    235
else (117)
    on left: 227 228 229 230 231 232, on right: 210 234 237 239
elseIfControl (118)
    on left: 233 234 235, on right: 211 235
selectControl (119)
    on left: 236 237 238 239, on right: 22
selectable (120)
    on left: 240 241, on right: 236 237 238 239
selectConditionBreak (121)
    on left: 242 243 244, on right: 236 237 238 239
casesControl (122)
    on left: 245 246 247 248 249 250, on right: 236 237 238 239 249
    250
caseBody (123)
    on left: 251 252, on right: 245 246 247 248 249 250
caseControlBreak (124)
    on left: 253 254 255 256 257 258 259 260 261, on right: 245 246
    249
forControl (125)
    on left: 262 263, on right: 23
forIterator (126)
    on left: 264 265, on right: 262 263
forConditionBreak (127)
    on left: 266 267 268 269 270 271 272 273, on right: 262 263
forBody (128)
    on left: 274 275, on right: 262 263
whileControl (129)
    on left: 276, on right: 24
whileBody (130)
    on left: 277 278, on right: 276
whileConditionBreak (131)
    on left: 279 280 281 282 283 284 285 286 287 288 289 290 291 292
    293 294 295, on right: 276
tryControl (132)
    on left: 296 297 298 299, on right: 25
returnControl (133)
    on left: 300 301, on right: 29 200 201
comparators (134)
    on left: 302 303 304 305 306 307 308 309, on right: 85 86
comments (135)
    on left: 310 311, on right: 246 248 311
lineEnd (136)
    on left: 312 313, on right: 76 165 167 169 172 174 176 287


state 0

    0 $accept: . program "end of file"

    "end of line"   shift, and go to state 1
    "%t or %T"      shift, and go to state 2
    "%f or %F"      shift, and go to state 3
    "~ or @"        shift, and go to state 4
    "$"             shift, and go to state 5
    "("             shift, and go to state 6
    "["             shift, and go to state 7
    "{"             shift, and go to state 8
    "+"             shift, and go to state 9
    "-"             shift, and go to state 10
    "if"            shift, and go to state 11
    "select"        shift, and go to state 12
    "function"      shift, and go to state 13
    "for"           shift, and go to state 14
    "while"         shift, and go to state 15
    "break"         shift, and go to state 16
    "try"           shift, and go to state 17
    "return"        shift, and go to state 18
    "string"        shift, and go to state 19
    "identifier"    shift, and go to state 20
    "integer"       shift, and go to state 21
    "float"         shift, and go to state 22
    "number"        shift, and go to state 23
    "line comment"  shift, and go to state 24

    program                go to state 25
    expressions            go to state 26
    recursiveExpression    go to state 27
    expression             go to state 28
    implicitFunctionCall   go to state 29
    functionCall           go to state 30
    specificFunctionCall   go to state 31
    simpleFunctionCall     go to state 32
    recursiveFunctionCall  go to state 33
    functionDeclaration    go to state 34
    comparison             go to state 35
    operation              go to state 36
    variable               go to state 37
    cell                   go to state 38
    matrix                 go to state 39
    variableDeclaration    go to state 40
    assignable             go to state 41
    multipleResults        go to state 42
    ifControl              go to state 43
    selectControl          go to state 44
    forControl             go to state 45
    whileControl           go to state 46
    tryControl             go to state 47
    returnControl          go to state 48


state 1

    2 program: "end of line" . expressions

    "%t or %T"      shift, and go to state 2
    "%f or %F"      shift, and go to state 3
    "~ or @"        shift, and go to state 4
    "$"             shift, and go to state 5
    "("             shift, and go to state 6
    "["             shift, and go to state 7
    "{"             shift, and go to state 8
    "+"             shift, and go to state 9
    "-"             shift, and go to state 10
    "if"            shift, and go to state 11
    "select"        shift, and go to state 12
    "function"      shift, and go to state 13
    "for"           shift, and go to state 14
    "while"         shift, and go to state 15
    "break"         shift, and go to state 16
    "try"           shift, and go to state 17
    "return"        shift, and go to state 18
    "string"        shift, and go to state 19
    "identifier"    shift, and go to state 20
    "integer"       shift, and go to state 21
    "float"         shift, and go to state 22
    "number"        shift, and go to state 23
    "line comment"  shift, and go to state 24

    expressions            go to state 49
    recursiveExpression    go to state 27
    expression             go to state 28
    implicitFunctionCall   go to state 29
    functionCall           go to state 30
    specificFunctionCall   go to state 31
    simpleFunctionCall     go to state 32
    recursiveFunctionCall  go to state 33
    functionDeclaration    go to state 34
    comparison             go to state 35
    operation              go to state 36
    variable               go to state 37
    cell                   go to state 38
    matrix                 go to state 39
    variableDeclaration    go to state 40
    assignable             go to state 41
    multipleResults        go to state 42
    ifControl              go to state 43
    selectControl          go to state 44
    forControl             go to state 45
    whileControl           go to state 46
    tryControl             go to state 47
    returnControl          go to state 48


state 2

   51 specificFunctionCall: "%t or %T" . "(" functionArgs ")"
  153 variable: "%t or %T" .

    "("  shift, and go to state 50

    $default  reduce using rule 153 (variable)


state 3

   52 specificFunctionCall: "%f or %F" . "(" functionArgs ")"
  154 variable: "%f or %F" .

    "("  shift, and go to state 51

    $default  reduce using rule 154 (variable)


state 4

   50 functionCall: "~ or @" . functionCall
  137 variable: "~ or @" . variable

    "%t or %T"    shift, and go to state 2
    "%f or %F"    shift, and go to state 3
    "~ or @"      shift, and go to state 4
    "$"           shift, and go to state 5
    "("           shift, and go to state 6
    "["           shift, and go to state 52
    "{"           shift, and go to state 8
    "+"           shift, and go to state 9
    "-"           shift, and go to state 10
    "string"      shift, and go to state 19
    "identifier"  shift, and go to state 53
    "integer"     shift, and go to state 21
    "float"       shift, and go to state 22
    "number"      shift, and go to state 23

    functionCall           go to state 54
    specificFunctionCall   go to state 31
    simpleFunctionCall     go to state 32
    recursiveFunctionCall  go to state 33
    comparison             go to state 35
    operation              go to state 36
    variable               go to state 55
    cell                   go to state 38
    matrix                 go to state 39


state 5

  152 variable: "$" .

    $default  reduce using rule 152 (variable)


state 6

   49 functionCall: "(" . functionCall ")"
  155 variable: "(" . variable ")"
  156         | "(" . variableFields ")"

    "%t or %T"    shift, and go to state 2
    "%f or %F"    shift, and go to state 3
    "~ or @"      shift, and go to state 4
    "$"           shift, and go to state 5
    "("           shift, and go to state 6
    "["           shift, and go to state 52
    "{"           shift, and go to state 8
    "+"           shift, and go to state 9
    "-"           shift, and go to state 10
    "string"      shift, and go to state 19
    "identifier"  shift, and go to state 53
    "integer"     shift, and go to state 21
    "float"       shift, and go to state 22
    "number"      shift, and go to state 23

    functionCall           go to state 56
    specificFunctionCall   go to state 31
    simpleFunctionCall     go to state 32
    recursiveFunctionCall  go to state 33
    comparison             go to state 35
    operation              go to state 36
    variable               go to state 57
    variableFields         go to state 58
    cell                   go to state 38
    matrix                 go to state 39


state 7

  171 matrix: "[" . matrixOrCellLines "]"
  172       | "[" . lineEnd matrixOrCellLines "]"
  173       | "[" . matrixOrCellLines matrixOrCellColumns "]"
  174       | "[" . lineEnd matrixOrCellLines matrixOrCellColumns "]"
  175       | "[" . matrixOrCellColumns "]"
  176       | "[" . lineEnd matrixOrCellColumns "]"
  177       | "[" . "]"
  208 multipleResults: "[" . matrixOrCellColumns "]"

    "end of line"   shift, and go to state 59
    "%t or %T"      shift, and go to state 2
    "%f or %F"      shift, and go to state 3
    "~ or @"        shift, and go to state 4
    "$"             shift, and go to state 5
    "("             shift, and go to state 6
    "["             shift, and go to state 52
    "]"             shift, and go to state 60
    "{"             shift, and go to state 8
    "+"             shift, and go to state 9
    "-"             shift, and go to state 10
    "string"        shift, and go to state 19
    "identifier"    shift, and go to state 53
    "integer"       shift, and go to state 21
    "float"         shift, and go to state 22
    "number"        shift, and go to state 23
    "line comment"  shift, and go to state 61

    functionCall           go to state 62
    specificFunctionCall   go to state 31
    simpleFunctionCall     go to state 32
    recursiveFunctionCall  go to state 33
    comparison             go to state 35
    operation              go to state 36
    variable               go to state 63
    cell                   go to state 38
    matrix                 go to state 39
    matrixOrCellLines      go to state 64
    matrixOrCellLine       go to state 65
    matrixOrCellColumns    go to state 66
    lineEnd                go to state 67


state 8

  164 cell: "{" . matrixOrCellLines "}"
  165     | "{" . lineEnd matrixOrCellLines "}"
  166     | "{" . matrixOrCellLines matrixOrCellColumns "}"
  167     | "{" . lineEnd matrixOrCellLines matrixOrCellColumns "}"
  168     | "{" . matrixOrCellColumns "}"
  169     | "{" . lineEnd matrixOrCellColumns "}"
  170     | "{" . "}"

    "end of line"   shift, and go to state 59
    "%t or %T"      shift, and go to state 2
    "%f or %F"      shift, and go to state 3
    "~ or @"        shift, and go to state 4
    "$"             shift, and go to state 5
    "("             shift, and go to state 6
    "["             shift, and go to state 52
    "{"             shift, and go to state 8
    "}"             shift, and go to state 68
    "+"             shift, and go to state 9
    "-"             shift, and go to state 10
    "string"        shift, and go to state 19
    "identifier"    shift, and go to state 53
    "integer"       shift, and go to state 21
    "float"         shift, and go to state 22
    "number"        shift, and go to state 23
    "line comment"  shift, and go to state 61

    functionCall           go to state 62
    specificFunctionCall   go to state 31
    simpleFunctionCall     go to state 32
    recursiveFunctionCall  go to state 33
    comparison             go to state 35
    operation              go to state 36
    variable               go to state 63
    cell                   go to state 38
    matrix                 go to state 39
    matrixOrCellLines      go to state 69
    matrixOrCellLine       go to state 65
    matrixOrCellColumns    go to state 70
    lineEnd                go to state 71


state 9

   94 operation: "+" . variable
   95          | "+" . functionCall

    "%t or %T"    shift, and go to state 2
    "%f or %F"    shift, and go to state 3
    "~ or @"      shift, and go to state 4
    "$"           shift, and go to state 5
    "("           shift, and go to state 6
    "["           shift, and go to state 52
    "{"           shift, and go to state 8
    "+"           shift, and go to state 9
    "-"           shift, and go to state 10
    "string"      shift, and go to state 19
    "identifier"  shift, and go to state 53
    "integer"     shift, and go to state 21
    "float"       shift, and go to state 22
    "number"      shift, and go to state 23

    functionCall           go to state 72
    specificFunctionCall   go to state 31
    simpleFunctionCall     go to state 32
    recursiveFunctionCall  go to state 33
    comparison             go to state 35
    operation              go to state 36
    variable               go to state 73
    cell                   go to state 38
    matrix                 go to state 39


state 10

   92 operation: "-" . variable
   93          | "-" . functionCall

    "%t or %T"    shift, and go to state 2
    "%f or %F"    shift, and go to state 3
    "~ or @"      shift, and go to state 4
    "$"           shift, and go to state 5
    "("           shift, and go to state 6
    "["           shift, and go to state 52
    "{"           shift, and go to state 8
    "+"           shift, and go to state 9
    "-"           shift, and go to state 10
    "string"      shift, and go to state 19
    "identifier"  shift, and go to state 53
    "integer"     shift, and go to state 21
    "float"       shift, and go to state 22
    "number"      shift, and go to state 23

    functionCall           go to state 74
    specificFunctionCall   go to state 31
    simpleFunctionCall     go to state 32
    recursiveFunctionCall  go to state 33
    comparison             go to state 35
    operation              go to state 36
    variable               go to state 75
    cell                   go to state 38
    matrix                 go to state 39


state 11

  209 ifControl: "if" . condition then thenBody "end"
  210          | "if" . condition then thenBody else elseBody "end"
  211          | "if" . condition then thenBody elseIfControl "end"

    "%t or %T"    shift, and go to state 2
    "%f or %F"    shift, and go to state 3
    "~ or @"      shift, and go to state 4
    "$"           shift, and go to state 5
    "("           shift, and go to state 6
    "["           shift, and go to state 52
    "{"           shift, and go to state 8
    "+"           shift, and go to state 9
    "-"           shift, and go to state 10
    "string"      shift, and go to state 19
    "identifier"  shift, and go to state 53
    "integer"     shift, and go to state 21
    "float"       shift, and go to state 22
    "number"      shift, and go to state 23

    functionCall           go to state 76
    specificFunctionCall   go to state 31
    simpleFunctionCall     go to state 32
    recursiveFunctionCall  go to state 33
    condition              go to state 77
    comparison             go to state 35
    operation              go to state 36
    variable               go to state 78
    cell                   go to state 38
    matrix                 go to state 39


state 12

  236 selectControl: "select" . selectable selectConditionBreak casesControl "end"
  237              | "select" . selectable selectConditionBreak casesControl else elseBody "end"
  238              | "select" . selectable "line comment" selectConditionBreak casesControl "end"
  239              | "select" . selectable "line comment" selectConditionBreak casesControl else elseBody "end"

    "%t or %T"    shift, and go to state 2
    "%f or %F"    shift, and go to state 3
    "~ or @"      shift, and go to state 4
    "$"           shift, and go to state 5
    "("           shift, and go to state 6
    "["           shift, and go to state 52
    "{"           shift, and go to state 8
    "+"           shift, and go to state 9
    "-"           shift, and go to state 10
    "string"      shift, and go to state 19
    "identifier"  shift, and go to state 53
    "integer"     shift, and go to state 21
    "float"       shift, and go to state 22
    "number"      shift, and go to state 23

    functionCall           go to state 79
    specificFunctionCall   go to state 31
    simpleFunctionCall     go to state 32
    recursiveFunctionCall  go to state 33
    comparison             go to state 35
    operation              go to state 36
    variable               go to state 80
    cell                   go to state 38
    matrix                 go to state 39
    selectable             go to state 81


state 13

   66 functionDeclaration: "function" . "identifier" "=" "identifier" functionDeclarationArguments functionDeclarationBreak functionBody "endfunction"
   67                    | "function" . "[" functionDeclarationReturns "]" "=" "identifier" functionDeclarationArguments functionDeclarationBreak functionBody "endfunction"
   68                    | "function" . "[" "]" "=" "identifier" functionDeclarationArguments functionDeclarationBreak functionBody "endfunction"
   69                    | "function" . "identifier" functionDeclarationArguments functionDeclarationBreak functionBody "endfunction"

    "["           shift, and go to state 82
    "identifier"  shift, and go to state 83


state 14

  262 forControl: "for" . "identifier" "=" forIterator forConditionBreak forBody "end"
  263           | "for" . "(" "identifier" "=" forIterator ")" forConditionBreak forBody "end"

    "("           shift, and go to state 84
    "identifier"  shift, and go to state 85


state 15

  276 whileControl: "while" . condition whileConditionBreak whileBody "end"

    "%t or %T"    shift, and go to state 2
    "%f or %F"    shift, and go to state 3
    "~ or @"      shift, and go to state 4
    "$"           shift, and go to state 5
    "("           shift, and go to state 6
    "["           shift, and go to state 52
    "{"           shift, and go to state 8
    "+"           shift, and go to state 9
    "-"           shift, and go to state 10
    "string"      shift, and go to state 19
    "identifier"  shift, and go to state 53
    "integer"     shift, and go to state 21
    "float"       shift, and go to state 22
    "number"      shift, and go to state 23

    functionCall           go to state 76
    specificFunctionCall   go to state 31
    simpleFunctionCall     go to state 32
    recursiveFunctionCall  go to state 33
    condition              go to state 86
    comparison             go to state 35
    operation              go to state 36
    variable               go to state 78
    cell                   go to state 38
    matrix                 go to state 39


state 16

   28 expression: "break" .

    $default  reduce using rule 28 (expression)


state 17
